updaated the full array

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       </div>
 
       <script src="assets/javaScript/game.js">
-      //create and array of possible choices
-      var computerChoices = ['r', 'p', 's'];
+      //create and array of possible choices needs expanding
+      var computerChoices = ["a", "b", "c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w","x","y","z"];
 
       //create variables for counts?
       var wins = 0;
       var losses = 0;
+      //do I need a var user guess ending wiht []
       var fail = undefined; //is this correct if I dont have an input at the start
 
       //var relating to html
