--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div>
-        <p id="directions-van">Press any letter to start playing!</p>
-        <p id="directions-text">Optional non vanishing direction placeholder</p>
-        <p id="win-text"></p>
-        <p id="losses-text"></p>
-        <p id="guesses-left"></p>
-        <p id="fail-guess"></p>
-        <p id="computer-guess">if possible disblay what letter the comp was thinking off at end of game before reset</p>
+        <h1 id="title-van">The Psychic Game</p>
+        <p id="directions-text">Guess the letter that the computer is thinking of!</p>
+        <p id="win-text">Wins:</p>
+        <p id="losses-text">Losses:</p>
+        <p id="guesses-left">Guesses left:</p>
+        <p id="fail-guess">Your Guesses so far:</p>
+        <p id="computer-guess">if possible display what letter the comp was thinking off at end of game before reset</p>
       </div>
 
       <script src="assets/javaScript/game.js">
