added styling and most likely broke the game worse than before but I'm not sure

--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
+    
     <div>
-        <h1 id="title-van">The Psychic Game</p>
+        <h1 id="title-van">The Psychic Game</h1>
         <p id="directions-text">Guess the letter that the computer is thinking of!</p>
         <p id="win-text">Wins:</p>
         <p id="losses-text">Losses:</p>
         <p id="guesses-left">Guesses left:</p>
         <p id="fail-guess">Your Guesses so far:</p>
-        <p id="computer-guess">if possible display what letter the comp was thinking off at end of game before reset</p>
+       <!-- <p id="computer-guess">if possible display what letter the comp was thinking off at end of game before reset</p>
       </div>
 
       <script src="assets/javaScript/game.js">
@@ -23,5 +26,6 @@
 
      // at this point I moved the code to the js sheet
       </script>
+      
 </body>
 </html>
