game now counts wins and changes text on first start. does not count down or record user input

--- a/index.html
+++ b/index.html
@@ -18,14 +18,7 @@
         <p id="guesses-left">Guesses left:</p>
         <p id="fail-guess">Your Guesses so far:</p>
        <!-- <p id="computer-guess">if possible display what letter the comp was thinking off at end of game before reset</p>
-      </div>
-
-      <script src="assets/javaScript/game.js">
-      //create and array of possible choices needs expanding
-      
-
-     // at this point I moved the code to the js sheet
-      </script>
-      
+      </div>-->
 </body>
+<script src="assets/javaScript/game.js"></script>
 </html>
